test/integration/bad/tuples/tuple_ternary.stan
transformed data {
   tuple(real, real) x = 1 ? (1, 2) : (3, 4, 5);
}
